# FinOps

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
docs/: conf.py  finops.utils.rst  index.rst  modules.rst  tests.rst  tests.test_utils.rst
docs/_build/doctrees/: environment.pickle  finops.doctree  finops.utils.doctree  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  finops.html  finops.utils.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/source/: conf.py  index.rst
finops/: __init__.py  codal.py  config.py  logger.py  tehran_stock_exchange.py  ticker.py
finops/utils/: base_downloader.py  base_scraper.py  downloader.py  preprocessor.py  scraper.py  wrappers.py
tests/: test_tehran_stock_exchange.py  test_ticker.py
tests/test_utils/: test_base_downloader.py  test_base_scraper.py  test_downloader.py  test_scraper.py
