[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finops"
version = "0.0.1"
authors = [
  {name="Alireza Nilgaran", email="alireza.nilgaran@gmail.com"},
]
description = "A library for analyzing financial data."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/nixuri/FinOps"
"Bug Tracker" = "https://github.com/nixuri/FinOps/issues"